transfer staff from old version start redesign to be more polymorphic

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,5 +11,11 @@ target_sources(Test PRIVATE
 )
 
 target_sources(Test_selected PRIVATE
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_stensor_descriptor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_init_list.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_stensor_impl.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_expression_impl.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
 )
