refactor stensor define non default copy,move ctrs to init view factory basic test view of stensor

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,7 +11,6 @@ target_sources(Test PRIVATE
 )
 
 target_sources(Test_selected PRIVATE
-
     ${CMAKE_CURRENT_SOURCE_DIR}/test_shareable_storage.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_view_descriptor.cpp
@@ -22,5 +21,7 @@ target_sources(Test_selected PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_slice.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_expression_impl.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_stensor_impl.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_view.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
 )
