--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,6 +24,7 @@ target_sources(Test_selected PRIVATE
 
     ${CMAKE_CURRENT_SOURCE_DIR}/test_view.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_walker.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_multiindex_iterator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
 )
