--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -29,6 +29,13 @@
         },
         {
             "type": "shell",
+            "label": "cmake build Test_selected with error filter",
+            "command": "cmake.exe --build ${workspaceFolder}\\build -j 10 --target Test_selected | findstr /s /i error",
+            "args": [],            
+            "group": "test"
+        },
+        {
+            "type": "shell",
             "label": "Run all tests",
             "command": "${workspaceFolder}\\build\\test\\Test.exe",
             "args": [],
@@ -51,6 +58,12 @@
             "label":"Selected Tests build & run",
             "dependsOrder": "sequence",
             "dependsOn":["cmake generate","cmake build Test_selected","Run selected tests"],
+            "group": "test"
+        },
+        {
+            "label":"Selected Tests build & run, error filter",
+            "dependsOrder": "sequence",
+            "dependsOn":["cmake generate","cmake build Test_selected with error filter","Run selected tests"],
             "group": "test"
         },
         {
