--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,7 @@ add_executable(Test_selected)
 target_include_directories(Test PRIVATE ${${project_name}_SOURCE_DIR}\\src)
 target_compile_options(Test PRIVATE -W1 -std:c++17 /Zc:__cplusplus)
 target_include_directories(Test_selected PRIVATE ${${project_name}_SOURCE_DIR}\\src)
-target_compile_options(Test_selected PRIVATE -W1 -std:c++17 /Zc:__cplusplus "$<$<CONFIG:RELEASE>:-O2>" /bigobj)
+target_compile_options(Test_selected PRIVATE -W1 -std:c++17 /Zc:__cplusplus "$<$<CONFIG:RELEASE>:-O2>")
 
 target_sources(Test PRIVATE 
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
@@ -17,17 +17,17 @@ target_sources(Test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide.cpp
 
     ${CMAKE_CURRENT_SOURCE_DIR}/test_dispatcher.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_walker.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_expression_impl.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_stensor_impl.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_view_descriptor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_stensor_descriptor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_walker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_multiindex_iterator.cpp
 )
 
 target_sources(Test_selected PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_multiindex_iterator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_walker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
 )
