--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,17 +17,18 @@ target_sources(Test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide.cpp
 
     ${CMAKE_CURRENT_SOURCE_DIR}/test_dispatcher.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_expression_impl.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_stensor_impl.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_view_descriptor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_stensor_descriptor.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_walker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_walker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_multiindex_iterator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_expression_impl.cpp
 )
 
 target_sources(Test_selected PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_walker.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_test.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
 )
