--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,7 @@ add_executable(Test_selected)
 target_include_directories(Test PRIVATE ${${project_name}_SOURCE_DIR}\\src)
 target_compile_options(Test PRIVATE -W1 -std:c++17 /Zc:__cplusplus)
 target_include_directories(Test_selected PRIVATE ${${project_name}_SOURCE_DIR}\\src)
-target_compile_options(Test_selected PRIVATE -W1 -std:c++17 /Zc:__cplusplus "$<$<CONFIG:RELEASE>:-O2>")
+target_compile_options(Test_selected PRIVATE -W1 -std:c++17 /Zc:__cplusplus "$<$<CONFIG:RELEASE>:-O2>" /bigobj)
 
 target_sources(Test PRIVATE 
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
