--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,21 +15,19 @@ target_sources(Test PRIVATE
     
     ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_walker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_test.cpp
+)
 
+target_sources(Test_selected PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_shareable_storage.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_init_list.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_slice.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
-
-)
-
-target_sources(Test_selected PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_view_descriptor.cpp
+    
     ${CMAKE_CURRENT_SOURCE_DIR}/test_multiindex_iterator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_evaluating_tensor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_storage_tensor.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_stensor_descriptor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_walker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
