--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,7 @@ add_executable(Test_selected)
 target_include_directories(Test PRIVATE ${${project_name}_SOURCE_DIR}\\src)
 target_compile_options(Test PRIVATE -W1 -std:c++17 /Zc:__cplusplus)
 target_include_directories(Test_selected PRIVATE ${${project_name}_SOURCE_DIR}\\src)
-target_compile_options(Test_selected PRIVATE -W1 -std:c++17 /Zc:__cplusplus "$<$<CONFIG:RELEASE>:-O2>" /bigobj)
+target_compile_options(Test_selected PRIVATE -W1 -std:c++17 /Zc:__cplusplus "$<$<CONFIG:RELEASE>:-O2>" /bigobj /MP)
 
 target_sources(Test PRIVATE 
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
@@ -20,7 +20,6 @@ target_sources(Test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_init_list.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_slice.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_test.cpp
     
     ${CMAKE_CURRENT_SOURCE_DIR}/test_multiindex_iterator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_evaluating_tensor.cpp
@@ -30,9 +29,11 @@ target_sources(Test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
     
     ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_expression_template.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_test.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
 )
 
 target_sources(Test_selected PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_deep_tree_compilation.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
 )
