add benchmarks of experimental expression template

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,6 +30,7 @@ target_sources(Test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_test.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_init_list.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_deep_tree_compilation.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_experimental_expression_template.cpp
 )
 
 target_sources(Test_selected PRIVATE
