add expression template polytensor engine

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,7 @@ target_include_directories(Test PRIVATE ${${project_name}_SOURCE_DIR}\\src)
 target_compile_options(Test PRIVATE -W1 -std:c++17 /Zc:__cplusplus)
 target_include_directories(Test_selected PRIVATE ${${project_name}_SOURCE_DIR}\\src)
 target_compile_options(Test_selected PRIVATE -W1 -std:c++17 /Zc:__cplusplus "$<$<CONFIG:RELEASE>:-O2>" /bigobj /MP)
+target_link_options(Test_selected PRIVATE /STACK:104857600)
 
 target_sources(Test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
@@ -26,8 +27,8 @@ target_sources(Test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_walker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
-
     ${CMAKE_CURRENT_SOURCE_DIR}/test_test.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_init_list.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_deep_tree_compilation.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_experimental_expression_template.cpp
