--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,11 +31,12 @@ target_sources(Test PRIVATE
 
     ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_init_list.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_deep_tree_compilation.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_variadic_container.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_experimental_expression_template.cpp
 )
 
 target_sources(Test_selected PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_experimental_expression_template.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
 )
