--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,13 +36,13 @@ target_sources(Test PRIVATE
 )
 
 target_sources(Test_selected PRIVATE
-    #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_expression_template.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_expression_template.cpp
 
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_broadcast.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_view.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_broadcast.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_view.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
 )
