--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,7 +36,7 @@ target_sources(Test PRIVATE
 target_sources(Test_selected PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_expression_template.cpp
 
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_const_impl.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_const_impl.cpp
 
     ${CMAKE_CURRENT_SOURCE_DIR}/test_helpers_for_testing.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
