--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,20 +1,29 @@
 add_executable(Test)
-target_compile_options(Test PRIVATE -W1 -std:c++17 /Zc:__cplusplus "$<$<CONFIG:RELEASE>:-O2>" /bigobj /MP)
-target_link_options(Test PRIVATE /STACK:104857600)
 target_link_libraries(Test PRIVATE expression_template)
+target_compile_features(Test PRIVATE cxx_std_17)
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+    target_compile_options(Test PRIVATE /W4 /arch:AVX2 /Zc:__cplusplus "$<$<CONFIG:RELEASE>:/O2>")
+else()
+    target_compile_options(Test PRIVATE -Wall "$<$<CONFIG:RELEASE>:-O3>")
+    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+        target_compile_options(Test PRIVATE -stdlib=libc++)
+    else()
+    endif()
+endif()
+
 
 target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_expression_template.cpp
 
     ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_init_list.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_slice.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_helpers_for_testing.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_broadcast.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_view.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_helpers_for_testing.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_broadcast.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_view.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
 )
