--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,7 +20,7 @@ target_sources(Test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_helpers_for_testing.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_broadcast.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_view.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory.cpp
