refactor iterator module make use of walker_iterator_adapter

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,8 +24,8 @@ target_sources(Test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
 
     #${CMAKE_CURRENT_SOURCE_DIR}/test_view.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
 
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
 )
