refactor iterator, add test iterator

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,10 +20,10 @@ target_sources(Test PRIVATE
 
     #${CMAKE_CURRENT_SOURCE_DIR}/test_broadcast.cpp
 
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_init_list.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_slice.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_init_list.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_slice.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor.cpp
 
     #${CMAKE_CURRENT_SOURCE_DIR}/test_common.cpp
