refactor iterator module modify compare operators of indexer_iterator, reverse_indexer_iterator, add test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,7 +24,8 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_slice.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_iterator.cpp
 
     #${CMAKE_CURRENT_SOURCE_DIR}/test_common.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory.cpp
