--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,7 +15,7 @@ endif()
 target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_expression_template.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_mapping_view.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_integral_type.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_integral_type.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_helpers_for_testing.cpp
 
     ${CMAKE_CURRENT_SOURCE_DIR}/test_common.cpp
