--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,7 +21,6 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/test_common.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_init_list.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_broadcast.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_slice.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
 ##
@@ -33,7 +32,7 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_implementation.cpp
 
     ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_operator.cpp
