refactor tensor operator=, assign add tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
         "xutility": "cpp",
         "typeindex": "cpp",
         "*.rh": "cpp",
-        "compare": "cpp"
+        "compare": "cpp",
+        "any": "cpp"
     }
 }
