--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,7 +20,7 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tmp.cpp
 
     #${CMAKE_CURRENT_SOURCE_DIR}/test_common.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_init_list.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_slice.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
