--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,13 +25,13 @@ target_sources(Test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_slice.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
 ###
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_indexer.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_indexer.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_walker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_traverser.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_iterator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_iterator.cpp
 ###
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_implementation.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_core.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_implementation.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
