refactor tensor_core tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,7 +30,7 @@ target_sources(Test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_traverser.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_iterator.cpp
 ###
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_core.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_core.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_implementation.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
