refactor tensor_implementation add traverser order parametrization, add tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,7 +31,7 @@ target_sources(Test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_iterator.cpp
 ###
     ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_core.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_implementation.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_implementation.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor.cpp
