--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -42,7 +42,7 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/test_combine.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_math_elementwise.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_math_along_axes.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_math_along_axes.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_statistic.cpp
 
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
