--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,7 @@ endif()
 
 
 target_sources(Test PRIVATE
+    #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_random.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_sort_search.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_algorithm.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_expression_template.cpp
@@ -48,7 +49,7 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/test_statistic.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_sort_search.cpp
 #
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_builder.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_builder.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_random.cpp
 
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
