add storage tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,6 +22,7 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/test_helpers_for_testing.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tmp.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_storage.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_common.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_init_list_helper.cpp
