refactor tensor_implementation

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -35,7 +35,7 @@ target_sources(Test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_iterator.cpp
 #
     ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_core.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_implementation.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_implementation.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
