refactor axes_correction_walker

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,13 +20,13 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/test_helpers_for_testing.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_reduce.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_tensor.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_traverser.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_traverser.cpp
 
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_reduce_binary.cpp
 
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tmp.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_trivial_iterator.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_iterator.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_iterator.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_copy.cpp
 
     #${CMAKE_CURRENT_SOURCE_DIR}/test_storage.cpp
