refactor multithreading add transform, add tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,6 +23,7 @@ target_sources(Test PRIVATE
 
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_iterator.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_reduce.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_multithreading.cpp
 
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_iterator_old.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_reduce_binary.cpp
@@ -30,6 +31,7 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_trivial_iterator.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_copy.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_multithreading.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_storage.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_common.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
@@ -61,9 +63,9 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/test_manipulation.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_math_elementwise.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_math_along_axes.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_statistic.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_sort_search.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_math_along_axes.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_statistic.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_sort_search.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_builder.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_random.cpp
