refactor statistic quantile,nanquantile,median,nanmedian add policy, refactor tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -71,6 +71,7 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/test_math_min_max.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_statistic_ptp_mean.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_statistic_var_std.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_statistic_quantile_median.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_statistic.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_sort_search.cpp
 #
