refactor sort_search

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -80,6 +80,7 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/test_sort_search.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_sort_search_sort_argsort.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_sort_search_partition_argpartition.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_sort_search_argmin_argmax.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_builder.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_random.cpp
